--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,31 +15,31 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.18.0
+  intl: 0.20.2
   sqflite: ^2.2.8+4
   path: ^1.8.3
   path_provider: ^2.0.15
   provider: ^6.0.5
   shared_preferences: ^2.1.1
-  csv: ^5.0.2
-  file_picker: ^5.3.1
-  google_sign_in: ^6.1.4
-  googleapis: ^11.2.0
-  googleapis_auth: ^1.4.1
+  csv: ^6.0.0
+  file_picker: ^10.3.3
+  google_sign_in: ^7.2.0
+  googleapis: ^15.0.0
+  googleapis_auth: ^2.0.0
   cupertino_icons: ^1.0.5
   url_launcher: ^6.1.12
-  flutter_slidable: ^3.0.0
-  fl_chart: ^0.63.0
-  syncfusion_flutter_charts: ^22.1.34
-  permission_handler: ^10.4.2
+  flutter_slidable: ^4.0.3
+  fl_chart: ^1.1.1
+  syncfusion_flutter_charts: ^31.2.3
+  permission_handler: ^12.0.1
   flutter_svg: ^2.0.7
-  uuid: ^3.0.7
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.2
-  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
 
 # Define the app icon
 flutter_launcher_icons:
