feat: Add dynamic color and theme switching
This commit introduces dynamic color theming to the application, allowing the UI to adapt to the user's system colors on supported platforms (like Android). It also adds a theme switcher in the settings page for manual selection between Light, Dark, and System default themes.

- **Dependencies**: Added the `dynamic_color` package to support Material You theming.
- **Theming**:
    - Created a new `AppTheme` class to manage light and dark `ThemeData`.
    - Integrated `DynamicColorBuilder` in `main.dart` to apply system-based color schemes.
    - Updated various pages (`Dashboard`, `AllData`, `AddData`, etc.) to use theme-based colors and styles instead of hardcoded values.
- **Settings**:
    - Added a theme selection dropdown (Light, Dark, System) to the `SettingsPage`.
    - Theme preference is now persisted in `shared_preferences`.
    - Added a quick access Settings icon to the `DashboardPage` app bar.
- **UI/UX**:
    - Wrapped scrollable content in most pages with `SafeArea` for better layout on devices with notches or system intrusions.
    - Refactored UI code for better readability and consistency with the new theming structure.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,49 @@
+# Application metadata
 name: fuel_tracker
 description: "Fuel Consumption Tracker by https://github.com/pollob666"
 publish_to: 'none'
 version: 1.0.0+1
 
+# Environment constraints
 environment:
-  sdk: ^3.6.2
+  sdk: '>=3.6.2 <4.0.0'
 
+# Application dependencies
 dependencies:
+  # Core Flutter packages
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+
+  # Internationalization
   intl: ^0.20.2
-  sqflite: ^2.4.1
+
+  # Database and local storage
+  sqflite: ^2.3.4
   path_provider: ^2.1.5
   path: ^1.9.0
-  shared_preferences: ^2.5.2
+  shared_preferences: ^2.3.1
+
+  # File and data handling
   file_picker: ^10.3.3
   csv: ^6.0.0
 
+  # UI and theming
+  dynamic_color: ^1.8.0
+
+# Development-only dependencies
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  intl_utils: ^2.8.10
+  intl_utils: ^2.8.7
 
+# Flutter-specific configurations
 flutter:
   uses-material-design: true
 
+# Internationalization configuration
 flutter_intl:
   enabled: true
   class_name: AppLocalizations
