--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,6 @@ jobs:
         uses: actions/checkout@v4
 
       # Step 2: Set up the Java Development Kit (JDK).
-      # Flutter requires this for Android builds.
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -38,18 +37,20 @@ jobs:
         run: flutter pub get
 
       # Step 5: Decode the keystore and create the key.properties file.
-      - name: Decode Keystore
+      - name: Decode Keystore and Create Properties File
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
         run: |
-          echo $KEYSTORE_BASE64 | base64 --decode > android/app/release.jks
-          echo "storeFile=release.jks" > android/key.properties
-          echo "keyAlias=$KEY_ALIAS" >> android/key.properties
-          echo "keyPassword=$KEY_PASSWORD" >> android/key.properties
-          echo "storePassword=$STORE_PASSWORD" >> android/key.properties
+          echo "Writing keystore and properties file..."
+          echo "$KEYSTORE_BASE64" | base64 --decode > android/app/release.jks
+          echo "storeFile=release.jks" > android/app/key.properties
+          echo "keyAlias=$KEY_ALIAS" >> android/app/key.properties
+          echo "keyPassword=$KEY_PASSWORD" >> android/app/key.properties
+          echo "storePassword=$STORE_PASSWORD" >> android/app/key.properties
+          echo "Keystore and properties files created successfully."
 
       # Step 6: Build the signed release APK.
       - name: Build signed release APK
@@ -65,15 +66,11 @@ jobs:
       - name: Create Release and Upload Artifact
         uses: softprops/action-gh-release@v1
         with:
-          # The name of the tag.
           tag_name: build-${{ github.run_number }}
-          # The name of the release.
           name: "Release ${{ github.run_number }}"
-          # The body of the release.
           body: |
             Automated release for build ${{ github.run_number }}.
             - Release APK (signed)
-          # A glob pattern to the file to upload.
           files: build/app/outputs/flutter-apk/fuelTracker-release-*.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
