--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
-// This looks for key.properties in the android/app/ directory.
+// This now looks for key.properties in the same directory (android/app).
 def keystorePropertiesFile = file("key.properties")
 def keystoreProperties = new Properties()
 if (keystorePropertiesFile.exists()) {
@@ -30,7 +30,7 @@ android {
             if (keystorePropertiesFile.exists()) {
                 keyAlias keystoreProperties['keyAlias']
                 keyPassword keystoreProperties['keyPassword']
-                // This now looks for the keystore file in the android/app/ directory.
+                // This will look for the keystore file in the android/app directory.
                 storeFile file(keystoreProperties['storeFile'])
                 storePassword keystoreProperties['storePassword']
             }
@@ -47,7 +47,7 @@ android {
 
     buildTypes {
         release {
-            // Only apply the signing config if the key.properties file exists.
+            // This ensures signing is only attempted if the properties file exists.
             if (keystorePropertiesFile.exists()) {
                 signingConfig signingConfigs.release
             }
