build: Configure release workflow and update version
- Update the app version to `1.1.0+11`.
- Grant write permissions to the release workflow in GitHub Actions to allow for creating releases and uploading artifacts.
- Remove the explicit `ndkVersion` from the Android build configuration to use the default.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ on:
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # This is required to create a release and upload artifacts.
+
     steps:
       # Step 1: Check out the repository code.
       - name: Checkout code
