chore: Update action-gh-release to v2
Updates the `softprops/action-gh-release` GitHub Action from version v1 to v2 in the `release.yml` workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,7 @@ jobs:
 
       # Step 8: Create a GitHub Release and upload the APK.
       - name: Create Release and Upload Artifact
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2 # Updated from v1 to v2
         with:
           tag_name: build-${{ github.run_number }}
           name: "Release ${{ github.run_number }}"
