--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: GPL-3.0-or-later
+# Copyright (C) 2024 Andalib Bin Haque <pollob666@gmail.com>
+
 # Application metadata
 name: fuel_tracker
 description: "Fuel Consumption Tracker by https://github.com/pollob666"
