feat: Implement vehicle management and localization
This commit introduces a comprehensive vehicle management system and integrates internationalization (i18n) for English and Bengali languages.

Key changes include:

-   **Vehicle Management:**
    -   Added `ManageVehiclesPage` to list, edit, and set a default vehicle.
    -   Created `AddVehiclePage` for adding new or editing existing vehicles.
    -   The dashboard now shows a welcome screen if no vehicles are added, prompting the user to add one.
    -   Expanded the `VehicleType` enum to include more specific categories like `carOrSedan`, `scooterOrMoped`, `suv`, and `pickupOrTruck`.
    -   `VehicleService` now uses `shared_preferences` to manage the default vehicle, removing the auto-creation of a "Default Vehicle".

-   **Localization:**
    -   Integrated `flutter_intl` to support English (`en`) and Bengali (`bn`) languages.
    -   Added localization files (`.arb`) and generated message files.
    -   UI text across the app now uses localized strings.

-   **Settings Enhancements:**
    -   Users can now set default fuel prices for each fuel type in the settings, which are auto-filled on the "Add Fuel Data" page.

-   **Application Assets & Configuration:**
    -   Added an application icon (`fuelTracker.png`) and configured `flutter_launcher_icons` to generate platform-specific icons.
    -   Updated Android and iOS configurations to use the new icons.
    -   Enabled `flutter gen-l10n` in `pubspec.yaml`.

-   **CI/CD:**
    -   Improved the GitHub Actions workflow to dynamically name the release based on the date and run number.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,18 +59,20 @@ jobs:
       - name: Build signed release APK
         run: flutter build apk --release
 
-      # Step 7: Rename the artifact to include build info.
-      - name: Rename APK
+      # Step 7: Rename the artifact to include build info and set the release name.
+      - name: Rename APK and Set Release Name
         run: |
-          BUILD_DATE=$(date +'%Y-%m-%dT%H%M%SZ')
-          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/fuelTracker-release-${{ github.run_number }}-${BUILD_DATE}.apk
+          BUILD_DATE_ISO=$(date +'%Y-%m-%dT%H%M%SZ')
+          BUILD_DATE_SIMPLE=$(date +'%Y%m%d')
+          echo "RELEASE_NAME=Release-${BUILD_DATE_SIMPLE}-${{ github.run_number }}" >> $GITHUB_ENV
+          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/fuelTracker-release-${BUILD_DATE_ISO}-${{ github.run_number }}.apk
 
       # Step 8: Create a GitHub Release and upload the APK.
       - name: Create Release and Upload Artifact
         uses: softprops/action-gh-release@v2 # Updated from v1 to v2
         with:
           tag_name: build-${{ github.run_number }}
-          name: "Release ${{ github.run_number }}"
+          name: ${{ env.RELEASE_NAME }}
           body: |
             Automated release for build ${{ github.run_number }}.
             - Release APK (signed)
