--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,16 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 # Copyright (C) 2024 Andalib Bin Haque <pollob666@gmail.com>
 
-# Application metadata
 name: fuel_tracker
 description: "Fuel Consumption Tracker by https://github.com/pollob666"
+
+# Prevent accidental publishing to pub.dev.
 publish_to: 'none'
+
+# The following defines the version and build number for your application.
 version: 1.1.0+11
 
-# Environment constraints
+# The following defines the environment constraints for your application.
 environment:
   sdk: '>=3.6.2 <4.0.0'
 
@@ -19,29 +22,27 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  # UI
+  cupertino_icons: ^1.0.2 # Kept for potential iOS-style icons.
+  dynamic_color: ^1.8.0 # For dynamic theming based on user's wallpaper (Android 12+).
+
+  # Data & Storage
+  csv: ^6.0.0
+  file_picker: ^10.3.3
+  path: ^1.9.0
+  path_provider: ^2.1.5
+  shared_preferences: ^2.3.1
+  sqflite: ^2.3.4
+
   # Internationalization
   intl: ^0.20.2
-
-  # Database and local storage
-  sqflite: ^2.3.4
-  path_provider: ^2.1.5
-  path: ^1.9.0
-  shared_preferences: ^2.3.1
-
-  # File and data handling
-  file_picker: ^10.3.3
-  csv: ^6.0.0
-
-  # UI and theming
-  dynamic_color: ^1.8.0
-  flutter_launcher_icons: ^0.14.4 # Generates launcher icons for Android and iOS.
 
 # Development-only dependencies
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  intl_utils: ^2.8.7
+  flutter_launcher_icons: ^0.14.4 # Generates launcher icons for Android and iOS.
 
 # Flutter-specific configurations
 flutter:
@@ -51,20 +52,9 @@ flutter:
   assets:
     - assets/fuelTracker.png
 
-# Internationalization configuration
-flutter_intl:
-  enabled: true
-  class_name: AppLocalizations
-  main_locale: en
-  arb_dir: lib/l10n
-  output_dir: lib/l10n
-
+# Launcher icon configuration (uses the `flutter_launcher_icons` package).
 flutter_launcher_icons:
-  android: "launcher_icon" # Master Android icon name (without extension).
-  ios: true                # Generate iOS icons.
-  min_sdk_android: 21 # android min sdk min: 21
-  image_path: "assets/fuelTracker.png" # Path to the master icon image.
-#  remove_alpha_ios: true   # Remove alpha channel for iOS icons.
-#  adaptive_icon_background: "assets/images/ic_launcher-bg.png" # Background for Android adaptive icons.
-#  adaptive_icon_foreground: "assets/images/ic_launcher-fg.png" # Foreground for Android adaptive icons.
-#  adaptive_icon_monochrome: "assets/images/ic_launcher-mono.png" # Monochrome icon for Android adaptive icons (e.g., for themed icons in Android 13+).
+  android: "launcher_icon"
+  ios: true
+  min_sdk_android: 21
+  image_path: "assets/fuelTracker.png"
