--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 # GitHub Actions workflow for building and releasing Flutter APKs.
 #
 # This workflow is triggered on every push to the 'release' branch.
-# It builds a signed release APK, renames it with build information,
-# and then creates a new GitHub Release, attaching the APK as an artifact.
+# It automatically increments the version number based on the commit message,
+# builds a signed release APK, and creates a new GitHub Release.
 #
 name: Build and Release APK
 
@@ -15,12 +15,14 @@ jobs:
   build-and-release:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # This is required to create a release and upload artifacts.
+      contents: write # Required to create a release and commit version changes.
 
     steps:
       # Step 1: Check out the repository code.
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Fetches all history for retrieving the last commit message.
 
       # Step 2: Set up the Java Development Kit (JDK).
       - name: Set up JDK 17
@@ -39,7 +41,39 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      # Step 5: Decode the keystore and create the key.properties file.
+      # Step 5: Determine Version Increment
+      - name: Determine Version Increment
+        id: version-increment-type
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          if [[ "$COMMIT_MSG" == *"majorUpdate"* ]]; then
+            echo "increment=major" >> $GITHUB_OUTPUT
+          elif [[ "$COMMIT_MSG" == *"feat:"* ]]; then
+            echo "increment=minor" >> $GITHUB_OUTPUT
+          elif [[ "$COMMIT_MSG" == *"chore:"* ]]; then
+            echo "increment=patch" >> $GITHUB_OUTPUT
+          else
+            echo "increment=patch" >> $GITHUB_OUTPUT
+          fi
+
+      # Step 6: Increment version
+      - name: Increment version
+        id: version-increment
+        uses: pujbot/action-increment-version@v1
+        with:
+          version-file: 'pubspec.yaml'
+          increment: ${{ steps.version-increment-type.outputs.increment }}
+
+      # Step 7: Commit version bump
+      - name: Commit version bump
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add pubspec.yaml
+          git commit -m "ci: Bump version to ${{ steps.version-increment.outputs.version }}"
+          git push
+
+      # Step 8: Decode the keystore and create the key.properties file.
       - name: Decode Keystore and Create Properties File
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
@@ -55,26 +89,23 @@ jobs:
           echo "storePassword=$STORE_PASSWORD" >> android/app/key.properties
           echo "Keystore and properties files created successfully."
 
-      # Step 6: Build the signed release APK.
+      # Step 9: Build the signed release APK.
       - name: Build signed release APK
         run: flutter build apk --release
 
-      # Step 7: Rename the artifact to include build info and set the release name.
-      - name: Rename APK and Set Release Name
+      # Step 10: Rename the artifact to include build info and set the release name.
+      - name: Rename APK
         run: |
-          BUILD_DATE_ISO=$(date +'%Y-%m-%dT%H%M%SZ')
-          BUILD_DATE_SIMPLE=$(date +'%Y%m%d')
-          echo "RELEASE_NAME=Release-${BUILD_DATE_SIMPLE}-${{ github.run_number }}" >> $GITHUB_ENV
-          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/fuelTracker-release-${BUILD_DATE_ISO}-${{ github.run_number }}.apk
+          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/fuelTracker-release-${{ steps.version-increment.outputs.version }}.apk
 
-      # Step 8: Create a GitHub Release and upload the APK.
+      # Step 11: Create a GitHub Release and upload the APK.
       - name: Create Release and Upload Artifact
-        uses: softprops/action-gh-release@v2 # Updated from v1 to v2
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: build-${{ github.run_number }}
-          name: ${{ env.RELEASE_NAME }}
+          tag_name: v${{ steps.version-increment.outputs.version }}
+          name: "Release ${{ steps.version-increment.outputs.version }}"
           body: |
-            Automated release for build ${{ github.run_number }}.
+            Automated release for version ${{ steps.version-increment.outputs.version }}.
             - Release APK (signed)
           files: build/app/outputs/flutter-apk/fuelTracker-release-*.apk
         env:
