feat: Enhance theme options and drawer UI
Introduces more granular theme control by allowing users to select a specific dark theme ("Monet" or "Black").

Key changes:
- `AppSettings` now stores `themeMode` and `darkTheme` as strings.
- The `SettingsPage` is updated with a new dropdown menu to manage these theme options.
- `main.dart` is refactored to apply the selected light or dark theme dynamically.
- `theme.dart` is expanded to provide theme data for "Monet" and "Black" dark modes, and adds a default card elevation.
- A new `AppDrawer` widget is introduced with an improved UI, including icons and selection highlighting, and a new app icon (`assets/dash.png`) is added to the drawer header.
- The old `drawer_widget.dart` is replaced by the new `AppDrawer`.
- The dashboard page now uses the theme's `onBackgroundColor` for better text visibility.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
 
   assets:
     - assets/fuelTracker.png
+    - assets/dash.png
 
 # Launcher icon configuration (uses the `flutter_launcher_icons` package).
 flutter_launcher_icons:
