feat: Add update check functionality
This commit introduces a feature to check for new application updates from GitHub releases.

- Adds a `VersionService` to compare the current app version with the latest release tag on GitHub.
- On the dashboard, if an update is available, a `SnackBar` is shown with a link to the latest release page.
- Adds `http`, `package_info_plus`, and `url_launcher` as new dependencies.
- Registers the `url_launcher` and `package_info_plus` plugins for macOS, Windows, and Linux platforms.
- Includes a minor cleanup by removing an unused import in `app_settings.dart`.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   # Internationalization
   intl: ^0.20.2
 
+  # Networking & Versioning
+  http: ^1.2.1
+  package_info_plus: ^8.0.0
+  url_launcher: ^6.3.2
+
 # Development-only dependencies
 dev_dependencies:
   flutter_test:
