--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,10 +59,10 @@ jobs:
       # Step 6: Increment version
       - name: Increment version
         id: version-increment
-        uses: pujbot/action-increment-version@v1
+        uses: MAD-GooSe/action-flutter-version-bump@v1
         with:
-          version-file: 'pubspec.yaml'
-          increment: ${{ steps.version-increment-type.outputs.increment }}
+          pubspec-path: 'pubspec.yaml'
+          mode: ${{ steps.version-increment-type.outputs.increment }}
 
       # Step 7: Commit version bump
       - name: Commit version bump
@@ -70,7 +70,7 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add pubspec.yaml
-          git commit -m "ci: Bump version to ${{ steps.version-increment.outputs.version }}"
+          git commit -m "ci: Bump version to ${{ steps.version-increment.outputs.new-version }}"
           git push
 
       # Step 8: Decode the keystore and create the key.properties file.
@@ -96,16 +96,16 @@ jobs:
       # Step 10: Rename the artifact to include build info and set the release name.
       - name: Rename APK
         run: |
-          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/fuelTracker-release-${{ steps.version-increment.outputs.version }}.apk
+          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/fuelTracker-release-${{ steps.version-increment.outputs.new-version }}.apk
 
       # Step 11: Create a GitHub Release and upload the APK.
       - name: Create Release and Upload Artifact
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.version-increment.outputs.version }}
-          name: "Release ${{ steps.version-increment.outputs.version }}"
+          tag_name: v${{ steps.version-increment.outputs.new-version }}
+          name: "Release ${{ steps.version-increment.outputs.new-version }}"
           body: |
-            Automated release for version ${{ steps.version-increment.outputs.version }}.
+            Automated release for version ${{ steps.version-increment.outputs.new-version }}.
             - Release APK (signed)
           files: build/app/outputs/flutter-apk/fuelTracker-release-*.apk
         env:
