--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
-# GitHub Actions workflow for building and releasing Flutter APKs.
+'''# GitHub Actions workflow for building and releasing Flutter APKs.
 #
 # This workflow is triggered on every push to the 'release' branch.
-# It automatically increments the version number, builds a signed release APK, 
-# and creates a new GitHub Release.
+# It automatically increments the version number based on the commit message,
+# builds a signed release APK, and creates a new GitHub Release.
 #
 name: Build and Release APK
 
@@ -14,7 +14,7 @@ on:
 jobs:
   build-and-release:
     # Prevent workflow from running in an infinite loop
-    if: "!contains(github.event.head_commit.message, 'Bump version to')"
+    if: "!contains(github.event.head_commit.message, 'ci: Bump version')"
     runs-on: ubuntu-latest
     permissions:
       contents: write # Required to create a release and commit version changes.
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Fetches all history. Required for the version bump action.
+          fetch-depth: 0 # Fetches all history. Required for version bumping logic.
           token: ${{ secrets.GITHUB_TOKEN }} # The token is needed for the version bump action to push changes
 
       # Step 2: Set up the Java Development Kit (JDK).
@@ -44,15 +44,59 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      # Step 5: Bump version
+      # Step 5: Determine Version Increment
+      - name: Determine Version Increment
+        id: version-increment-type
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          if [[ "$COMMIT_MSG" == *"majorUpdate"* || "$COMMIT_MSG" == *"refactor:"* ]]; then
+            echo "increment=major" >> $GITHUB_OUTPUT
+          elif [[ "$COMMIT_MSG" == *"feat:"* ]]; then
+            echo "increment=minor" >> $GITHUB_OUTPUT
+          elif [[ "$COMMIT_MSG" == *"feat(ci):"* ]]; then
+            echo "increment=minor" >> $GITHUB_OUTPUT
+          else
+            echo "increment=patch" >> $GITHUB_OUTPUT
+          fi
+
+      # Step 6: Bump version
       - name: Bump version
         id: version-increment
-        uses: RodXander/flutter-bump-version@v0.0.02
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: 'release'
-          
-      # Step 6: Decode the keystore and create the key.properties file.
+        run: |
+          CURRENT_VERSION=$(grep 'version: ' pubspec.yaml | sed 's/version: //')
+          VERSION_PART=$(echo $CURRENT_VERSION | cut -d'+' -f1)
+          BUILD_PART=$(echo $CURRENT_VERSION | cut -d'+' -f2)
+          MAJOR=$(echo $VERSION_PART | cut -d'.' -f1)
+          MINOR=$(echo $VERSION_PART | cut -d'.' -f2)
+          PATCH=$(echo $VERSION_PART | cut -d'.' -f3)
+          BUMP_TYPE=${{ steps.version-increment-type.outputs.increment }}
+          if [[ "$BUMP_TYPE" == "major" ]]; then
+            MAJOR=$((MAJOR + 1))
+            MINOR=0
+            PATCH=0
+            BUILD_PART=1
+          elif [[ "$BUMP_TYPE" == "minor" ]]; then
+            MINOR=$((MINOR + 1))
+            PATCH=0
+            BUILD_PART=1
+          else # patch
+            PATCH=$((PATCH + 1))
+            BUILD_PART=$((BUILD_PART + 1))
+          fi
+          NEW_VERSION="$MAJOR.$MINOR.$PATCH+$BUILD_PART"
+          echo "new_version=${NEW_VERSION}" >> $GITHUB_OUTPUT
+          sed -i "s/version: .*/version: $NEW_VERSION/" pubspec.yaml
+
+      # Step 7: Commit version bump
+      - name: Commit version bump
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add pubspec.yaml
+          git commit -m "ci: Bump version to ${{ steps.version-increment.outputs.new_version }}"
+          git push
+
+      # Step 8: Decode the keystore and create the key.properties file.
       - name: Decode Keystore and Create Properties File
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
@@ -68,16 +112,16 @@ jobs:
           echo "storePassword=$STORE_PASSWORD" >> android/app/key.properties
           echo "Keystore and properties files created successfully."
 
-      # Step 7: Build the signed release APK.
+      # Step 9: Build the signed release APK.
       - name: Build signed release APK
         run: flutter build apk --release
 
-      # Step 8: Rename the artifact to include build info and set the release name.
+      # Step 10: Rename the artifact to include build info and set the release name.
       - name: Rename APK
         run: |
           mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/fuelTracker-release-${{ steps.version-increment.outputs.new_version }}.apk
 
-      # Step 9: Create a GitHub Release and upload the APK.
+      # Step 11: Create a GitHub Release and upload the APK.
       - name: Create Release and Upload Artifact
         uses: softprops/action-gh-release@v2
         with:
@@ -89,3 +133,4 @@ jobs:
           files: build/app/outputs/flutter-apk/fuelTracker-release-*.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+''
