Feat(ci): and Fix Correct syntax in release workflow
Corrected a syntax error in the `.github/workflows/release.yml` file.

The initial and final lines of the workflow file were incorrectly using `'''` for comments, which has been fixed to use the proper `#` character for YAML comments.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-'''# GitHub Actions workflow for building and releasing Flutter APKs.
+# GitHub Actions workflow for building and releasing Flutter APKs.
 #
 # This workflow is triggered on every push to the 'release' branch.
 # It automatically increments the version number based on the commit message,
@@ -133,4 +133,3 @@ jobs:
           files: build/app/outputs/flutter-apk/fuelTracker-release-*.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-''
