chore: Fix YAML syntax in release workflow
Removes stray quotation marks from the start and end of the `release.yml` GitHub Actions workflow file to correct the YAML syntax.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-"""# GitHub Actions workflow for building and releasing Flutter APKs and IPAs.
+# GitHub Actions workflow for building and releasing Flutter APKs and IPAs.
 #
 # This workflow is triggered on every push to the 'release' branch.
 # It automatically increments the version number based on the commit message,
@@ -212,4 +212,3 @@ jobs:
             artifacts/ipa/*.ipa
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-""
