--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -152,8 +152,14 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build unsigned release IPA
-        run: flutter build ipa --release --no-codesign
+      - name: Build unsigned iOS app bundle
+        run: flutter build ios --release --no-codesign
+
+      - name: Create unsigned IPA
+        run: |
+          mkdir -p "build/ios/ipa/Payload"
+          cp -r "build/ios/iphoneos/Runner.app" "build/ios/ipa/Payload/"
+          (cd build/ios/ipa && zip -r fuelTracker.ipa Payload)
 
       - name: Rename IPA
         id: rename
