--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^1.2.1
   package_info_plus: ^8.0.0
   url_launcher: ^6.3.2
+  google_mobile_ads: ^6.0.0
+
 
 # Development-only dependencies
 dev_dependencies:
