feat: Enable Hybrid Composition for Android
This commit enables Hybrid Composition for Android to support displaying native Android views (like ads) within the Flutter widget hierarchy.

- The `io.flutter.embedding.android.HybridComposition` meta-data tag has been added to `AndroidManifest.xml` and set to `true`.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data
+            android:name="io.flutter.embedding.android.HybridComposition"
+            android:value="true" />
+        <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-4519441960386265~5488026786"/>
     </application>
