--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 # GitHub Actions workflow for building and releasing Flutter APKs.
 #
-# This workflow is triggered on every push to the 'release' branch.
+# This workflow is triggered on every push to the \'release\' branch.
 # It automatically increments the version number based on the commit message,
 # builds a signed APK, and creates a new GitHub Release with the file.
 #
@@ -14,7 +14,7 @@ on:
 jobs:
   version-bump:
     # Prevent workflow from running in an infinite loop
-    if: "!contains(github.event.head_commit.message, 'ci: Bump version')"
+    if: "!contains(github.event.head_commit.message, \'ci: Bump version\')"
     runs-on: ubuntu-latest
     permissions:
       contents: write # Required to commit version changes.
@@ -47,12 +47,12 @@ jobs:
       - name: Bump version
         id: version-increment
         run: |
-          CURRENT_VERSION=$(grep 'version: ' pubspec.yaml | sed 's/version: //')
-          VERSION_PART=$(echo $CURRENT_VERSION | cut -d'+' -f1)
-          BUILD_PART=$(echo $CURRENT_VERSION | cut -d'+' -f2)
-          MAJOR=$(echo $VERSION_PART | cut -d'.' -f1)
-          MINOR=$(echo $VERSION_PART | cut -d'.' -f2)
-          PATCH=$(echo $VERSION_PART | cut -d'.' -f3)
+          CURRENT_VERSION=$(grep \'version: \' pubspec.yaml | sed \'s/version: //\')
+          VERSION_PART=$(echo $CURRENT_VERSION | cut -d\'+\' -f1)
+          BUILD_PART=$(echo $CURRENT_VERSION | cut -d\'+\' -f2)
+          MAJOR=$(echo $VERSION_PART | cut -d\'.\' -f1)
+          MINOR=$(echo $VERSION_PART | cut -d\'.\' -f2)
+          PATCH=$(echo $VERSION_PART | cut -d\'.\' -f3)
           BUMP_TYPE=${{ steps.version-increment-type.outputs.increment }}
           if [[ "$BUMP_TYPE" == "major" ]]; then
             MAJOR=$((MAJOR + 1)); MINOR=0; PATCH=0; BUILD_PART=1
@@ -72,8 +72,8 @@ jobs:
       # Step 4: Commit version bump
       - name: Commit version bump
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global user.name \'github-actions[bot]\'
+          git config --global user.email \'github-actions[bot]@users.noreply.github.com\'
           git add pubspec.yaml
           git commit -m "ci: Bump version to ${{ steps.version-increment.outputs.new_version }}"
           git push
@@ -85,18 +85,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: 'release'
+          ref: \'release\'
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          channel: \'stable\'
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: \'temurin\'
+          java-version: \'17\'
 
       - name: Install dependencies
         run: flutter pub get
@@ -110,10 +110,10 @@ jobs:
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
         run: |
           echo "$KEYSTORE_BASE64" | base64 --decode > android/app/release.jks
-          echo "storeFile=release.jks" > android/key.properties
-          echo "keyAlias=$KEY_ALIAS" >> android/key.properties
-          echo "keyPassword=$KEY_PASSWORD" >> android/key.properties
-          echo "storePassword=$STORE_PASSWORD" >> android/key.properties
+          echo "storeFile=release.jks" > android/app/key.properties
+          echo "keyAlias=$KEY_ALIAS" >> android/app/key.properties
+          echo "keyPassword=$KEY_PASSWORD" >> android/app/key.properties
+          echo "storePassword=$STORE_PASSWORD" >> android/app/key.properties
 
       - name: Build signed release APK
         run: |
